# fps_erpnext

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
fps_erpnext/: hooks.py
fps_erpnext/api/: email.py  pdf_watermark.py  permission.py
fps_erpnext/fps/: microsoft_graph.py
fps_erpnext/fps/doctype/fps_microsoft_settings/: fps_microsoft_settings.json  fps_microsoft_settings.py
fps_erpnext/fps/doctype/fps_outgoing_email/: fps_outgoing_email.json  fps_outgoing_email.py
fps_erpnext/fps/workspace/fps/: fps.json
