[project]
name = "fps_erpnext"
authors = [
    { name = "Fast Planet Shipping LLC", email = "hello@fastplanet.ae"}
]
description = "Custom ERPNext app for Fast Planet Shipping LLC - freight forwarding operations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    # Used by fps_erpnext.api.pdf_watermark for per-page watermark stamping
    # (Pillow's PDF save loses RGBA alpha in our env, so we use reportlab).
    "reportlab>=4.0.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
    "RUF002", # docstring contains ambiguous acute accent unicode character
    "RUF003", # comment contains ambiguous no-break space unicode character
    "RUF010", # explicit conversion to string or repr: !s or !r
    "RUF012", # mutable default values in class attributes
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
